Добавил в первый option следующее: value="" это позвонило сделать select обызательным к выбору перед отправкой формы

--- a/index.html
+++ b/index.html
@@ -200,9 +200,8 @@
                     </div>
                     <div id="forms">
                         <form action="forms.php" method="post">
-                            <select name="filters" id="filters"  size="1" required>
-                                    
-                                <option class="option1">Выберите товар</option>
+                            <select name="filters" id="filters" size="1" required="required">        
+                                <option value="" class="option1">Выберите товар</option>
                                     <optgroup class="option1" label="С гарантией 5 лет">
                                 <option class="option1" value="filter_war5_add">eSpring, доп. кран</option>
                                 <option class="option1" value="filter_war5_main">eSpring, осн. кран</option>
@@ -289,7 +288,7 @@
                                 <td id="strelka">
                                     &rarr;
                                     </td>
-                                <td id="business2"><form action="forms.php" method="post">
+                                <td id="business2"><form action="partners.php" method="post">
                         <input class="form_submit" id="form_partner" type="submit" name="partner" value="Хочу стать партнером" />
                          </form></td>
                                 <td id="business3"></td>
